src/objects/Contact_Function__c.object
<CustomObject>
    <description>Object to link contacts to alternative accounts (as Contact Roles do not display on the Contact layout)</description>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Contact Functions</relationshipLabel>
        <relationshipName>Contact_Functions</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the Contact Funcion is currently Active i.e. is the Contact actively performing this Function in this Organisation</description>
        <inlineHelpText>Indicates whether the Contact Funcion is currently Active i.e. is the Contact actively performing this Function in this Organisation</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Address__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup between the Contact Function and the Address</description>
        <inlineHelpText>You only need to add an address if the address is different from the account.</inlineHelpText>
        <label>Address</label>
        <referenceTo>Address__c</referenceTo>
        <relationshipLabel>Contact Functions</relationshipLabel>
        <relationshipName>Contact_Functions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Alternate_Email_Temp__c</fullName>
        <description>Temporary field to map migrated email addresses to, this allows malformed email addresses to be entered into system without causing record import to fail.  These addresses will need to be moved to the permanent email address field once migrated</description>
        <label>Alternate Email Temp</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Alternate_Email__c</fullName>
        <description>Secondary email address</description>
        <label>Alternate Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Contact_Type__c</fullName>
        <description>What type of influence the contact has in the buying decision making process.</description>
        <label>Contact Type</label>
        <picklist>
            <picklistValues>
                <fullName>BSC Advocate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Budget Holder</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Influencer</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Contact Functions</relationshipLabel>
        <relationshipName>Contact_Functions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Deceased__c</fullName>
        <description>Indicates whether the Contact record assocated with the Contact Function is Deceased.</description>
        <formula>IF(Contact__r.Deceased__c , &quot;True&quot;, &quot;False&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Deceased</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Departed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Contact has left this organisation</description>
        <label>Departed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Department__c</fullName>
        <label>Department</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Do_Not_Call__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Do Not Call</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Do_Not_Mail__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Do Not Mail</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Do_Not_Send_Magazine__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Do Not Send Magazine</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Email_Opt_Out__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Email Opt Out</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Email_Temp__c</fullName>
        <description>Temporary field to map migrated email addresses to, this allows malformed email addresses to be entered into system without causing record import to fail.  These addresses will need to be moved to the permanent email address field once migrated.</description>
        <label>Email Temp</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <description>Primary email address</description>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Fax_Opt_Out__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Fax Opt Out</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Fax__c</fullName>
        <label>Fax</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <inlineHelpText>First name of contact whilst at this role</inlineHelpText>
        <label>First Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gender__c</fullName>
        <description>Indicates what gender the Contact record assocated with the Contact Function is</description>
        <formula>TEXT(Contact__r.Gender__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Pulls from Contact records</inlineHelpText>
        <label>Gender</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Home_Phone__c</fullName>
        <description>Displays the Home Phone from the Contact related to this Contact Function</description>
        <formula>Contact__r.HomePhone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Home Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Honours__c</fullName>
        <description>Indicates what honours the Contact record assocated with the Contact Function has</description>
        <formula>Contact__r.Honours__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Populated from Contact record</inlineHelpText>
        <label>Honours</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Key_Contact__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Key contact at organisation</description>
        <label>Key Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <description>Lase name of this contact whilst active in this role.</description>
        <label>Last Name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Migrated__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the Contact Function data was migrated form the Course Booker database</description>
        <label>Migrated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Mobile__c</fullName>
        <label>Mobile</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>PK_CB_PROLE_ID__c</fullName>
        <description>This is the Primary Key of the Person Role from the source Person Role data and maps to Person_Role.PROLE_ID from the Person Role table in the CB database.</description>
        <externalId>true</externalId>
        <label>PK_CB_PROLE_ID</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Preferred_Comm_Method__c</fullName>
        <label>Preferred Comm Method</label>
        <picklist>
            <picklistValues>
                <fullName>Email</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Post</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Salutation__c</fullName>
        <description>Salutation of the Contact whilst active in the Contact Role</description>
        <label>Salutation</label>
        <picklist>
            <picklistValues>
                <fullName>Mr</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mrs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ms</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Miss</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dr</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <description>Job title / role</description>
        <label>Title</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Past Employee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Secondary Employee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Past Secondary Employee</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>USIN__c</fullName>
        <description>We purchase prospect data from different agencies. This field contains the unique person identifier from the source system from which the Organisation was purchased</description>
        <inlineHelpText>Unique person reference as defined by data supplier/cleanser</inlineHelpText>
        <label>USIN</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Contact Function</label>
    <nameField>
        <displayFormat>CF-{0000000}</displayFormat>
        <label>Contact Function Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contact Functions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>